# oda-kb

./: .gitignore  Makefile  README.md  VERSION  a  data.json  f.html  html  index.html  odasparql.py  setup.cfg  setup.py  tox.ini  workflow-notebook_exceptions.json  workflow-notebook_output.html  workflow-notebook_output.ipynb  workflow-notebook_output.json  x12  x1log
.github/workflows/: main.yml  python-package.yml
cc-data/odahub-io-cc-crab-crab-78a0919-17b32402/: meta
cc-data/odahub-io-cc-crab-crab-949f172-2596ae21/: meta
cc-data/odahub-io-cc-crab-crab-949f172-7976bed0/: meta
cc-data/odahub-io-cc-crab-crab-949f172-e6e724e1/: meta
cc-data/odahub-io-cc-cygx1-verify-17a343b-538af57b/: meta
cc-data/odahub-io-cc-cygx1-verify-17a343b-5ce2d216/: meta
cc-data/odahub-io-cc-cygx1-verify-17a343b-7e982b33/: meta
cc-data/odahub-io-cc-cygx1-verify-17a343b-8eedce18/: meta
cc-data/odahub-io-cc-cygx1-verify-17a343b-a16fe264/: meta
cc-data/odahub-io-cc-cygx1-verify-17a343b-b65e848c/: meta
cc-data/odahub-io-cc-cygx1-verify-17a343b-bfaf7c6b/: meta
cc-data/odahub-io-cc-cygx1-verify-17a343b-c8f2d4fa/: meta
cc-data/odahub-io-cc-cygx1-verify-17a343b-dc0babf6/: meta
cc-data/odahub-io-cc-cygx1-verify-27a9f0d-06225a57/: meta
cc-data/odahub-io-cc-cygx1-verify-27a9f0d-109167b7/: meta
cc-data/odahub-io-cc-cygx1-verify-27a9f0d-293ce50f/: meta
cc-data/odahub-io-cc-cygx1-verify-27a9f0d-2ddd8ee3/: meta
cc-data/odahub-io-cc-cygx1-verify-27a9f0d-3f8d4126/: meta
cc-data/odahub-io-cc-cygx1-verify-27a9f0d-5bed3ed3/: meta
cc-data/odahub-io-cc-cygx1-verify-27a9f0d-6b0cbb13/: meta
cc-data/odahub-io-cc-cygx1-verify-27a9f0d-77478f23/: meta
cc-data/odahub-io-cc-cygx1-verify-27a9f0d-77c53b35/: meta
cc-data/odahub-io-cc-cygx1-verify-27a9f0d-831390eb/: meta
cc-data/odahub-io-cc-cygx1-verify-27a9f0d-9282deb8/: meta
cc-data/odahub-io-cc-cygx1-verify-27a9f0d-9eb1d592/: meta
odakb/: __init__.py  board.py  cli.py  config.py  cwl.py  datalake.py  evaluate.py  evaluator.py  sparql.py
odasparql/: __init__.py
tests/: test_board.py  test_cache_mode.py  test_datalake.py  test_local.py  test_local_pypi.py  test_record.py  test_slurm.py  test_sparql.py
(+151 files in other folders)
