[bumpversion]
current_version = 0.2.27

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[metadata]
name = oda-knowledge-base
license = GPL-2+
license_file = COPYING
author = V.S.
author_email = vladimir.savchenko@gmail.com
url = https://odahub.io/
classifiers = 
	Development Status :: 4 - Beta
	Environment :: Console
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: POSIX
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Internet
	Topic :: Scientific/Engineering :: Astronomy

[options]
packages = find:
install_requires = 
	lxml
	six
	coloredlogs
	path.py
	minio
	cwltool
tests_require = 
	pytest

[options.entry_points]
console_scripts = 
	oda-kb = odakb.sparql:cli
	oda-kb-eval = odakb.evaluator:_evaluate
	oda-kb-datalake = odakb.datalake:cli

[options.package_data]
oda_evaluate.tests.data = *.xml

